test/expected/explain_alrgi.out
explain alignas(4) register int x
        ^
9: error: "alignas" can not be combined with "register"
